elastic-(4 tradingbot)/oauth-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy-df-internal
  name: oauth2-proxy-df-internal
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy-df-internal
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy-df-internal
    spec:
      containers:
      - args:
        - --provider=oidc
        - --oidc-issuer-url=https://cognito-idp.eu-central-1.amazonaws.com/eu-central-1_n2sfAgN5P
        - --provider-display-name=cognito_auth
        - --email-domain=*
        # - --upstream=file:///dev/null
        - --http-address=0.0.0.0:4180
        - --oidc-jwks-url=https://cognito-idp.eu-central-1.amazonaws.com/eu-central-1_n2sfAgN5P/.well-known/jwks.json
        # - --oidc-issuer-url=https://cognito-idp.eu-central-1.amazonaws.com/eu-central-1_n2sfAgN5P
        - --cookie-secure=true
        # - --whitelist-domain=.datafortress.cloud
        - --cookie-domain=datafortress.cloud
        - --skip-provider-button=True
        - --scope=openid
        - --session-cookie-minimal
        # Register a new application
        # https://github.com/settings/applications/new
        image: quay.io/oauth2-proxy/oauth2-proxy:latest
        imagePullPolicy: Always
        name: oauth2-proxy-df-internal
        ports:
        - containerPort: 4180
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oauth2-proxy-df-internal
  name: oauth2-proxy-df-internal
  namespace: kube-system
spec:
  ports:
  - name: http
    port: 4180
    protocol: TCP
    targetPort: 4180
  selector:
    k8s-app: oauth2-proxy-df-internal
